--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@types/redux-mock-store": "^1.0.2",
+    "axios-mock-adapter": "^1.18.2",
     "redux-mock-store": "^1.5.4",
     "typescript": "~3.7.2"
   },
